Serialization fix. Some code refactored to meet standards.

--- a/App/JocysCom/Configuration/SettingsUserControl.resx
+++ b/App/JocysCom/Configuration/SettingsUserControl.resx
@@ -139,18 +139,18 @@
   <data name="EditButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKXSURBVDhPjZNNTBNBFMf35MWDdzTxRKIkGI0aPxG0JBg/
-        YmwUY0ChigLBCogE7KF40ErEmGDb0A8sLZRiQ5AE/Lp5JSbExIMeJNEoUrvddrfYltJ25++btaQcwPCS
-        2Te7s//fvPdmnsCt75l9zjMSZG5vgNlcXubw+DWvzYf8zOUZJU/DM8JsziFmd/tY31P7nCbmNjg8xrAB
-        4z9l6ZEj7/YFWF4uCE6vXwO03u1Gk7Edl+sa0NjShku1BnSazGi53YGGJiOaySfTOaSygIOiyssLAFlR
-        oMTjiMmyNudeUeg9JiMSjSEsyRogvR5gxWoMN3FaX43mW+3/PjCGbE5FOpPbGECWFUhSVNudm0rZZwiw
-        RIDEUoZGFsGX0+sDVuxaYwsOlulQrqvCkYpK1DU0o99qx509e9GzZRNqBKHuvwBeA1GMIBQWsRCO4HdE
-        grHLpK39fNyNns1Cak1A9RUD9h8uR239dTCVYZnnvrSMR10l+PF5AGZLLwYDQei3Fn1bE8CrHhZFRKMy
-        Mlk6Nsr7YUcxEpEXUEPn8Xq4FierL0ATc3P6CgBGFb9YU4+jFTqcOafHgOs5zMZtSIhjSH7X4+Pb3bB0
-        7cLk1LtCEV10XblYpXB5yCKdQIjnLkp40LZdE8e/nsXsdKmWRjyRxdDo+KpTyAPKaNcTlVVatXnOltZS
-        TRz9cgozkzth6SxGdDGFWJJhYPU9cHhHmUqA+VAY8wth/ApLmP3wHh7zPnx6dRwz4ztgoRpE/6QQiach
-        JVUC+AsANwF4BDl6ZsinqOom0z1Y7+vQd6OIIinBYioHhXbmu8vLgJM0eTm1M7WmjVrUSq3KR3Bimh04
-        dAxX6w2w9feyiak3zDUcYFbHv3Wry8eeaO0sCH8BToDR0hvURwcAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKVSURBVDhPjZNNTBNBFMf35MWDdzTxRKIkGI0aPxG0JBg/
+        YmwUY0ChikKDFRAJ2EPxINWIIRRst9oPaDEVwQQSJB69EhNi4kEPkmgUqd12uy22pbTd+ftmKSkHMLxk
+        9s3u7P83772ZJ3DrHbDPuYYDzOkZYTbRw+wun+a1udvHRJefPA3XMLM53GzA6WW9ffY5TcztxdArhk0Y
+        /ylLjxx5p3eE5eWC4PD4NEDL/S40mdpwta4Bjc2tuFJrQIfZgua77WhoMsFIPpnOIZUF7BRVXl4AKLEY
+        YvE4ooqizbmPxeg9qiAsRxGKKBogvRFg1WoMt3FWXw3jnbaVD4whm1ORzuQ2B1CUGCIRWdudm0rZZwiw
+        RIDEUoZGFoHxyY0Bq3ajsRmHy3Qo11XhWEUl6hqMsA3acW/ffnRv24IaQaj7L4DXQJLCCIYkLITC+BOO
+        wNRp1tZ+Pe1C91YhtS6g+poBB4+Wo7b+JpjKsMxzX1rG484S/PwiwmJ9AnfgDfTbi76vC+BVD0kSZFlB
+        JkvHRnn3tBcjER6FGryIaX8tTldfgibm5vAWAIwqfrmmHscrdDh3QQ/xpQcW0w4kpNdI/tDj0/u9sHbu
+        wduJ6UIRRbquXKxSuDxkiU4gyHOXInjUulMTx7+dx+xUqZZGPJGF2z+65hTygDLa9VRllVZtnrO1pVQT
+        y1/PYGZiN6wdxZAXU4gmGZ6vvQd2j5+pBJgPhjC/EMLvUASzHz/AazmAz+9OYmZ8F6xUA/lvCuF4GpGk
+        SgBfAeAkAI8gR88M+RRV3Wx+gMGHOvTeKqJISrCYyiFGO/PdlWXAQZq8nNqZWtNGLdpPrcpHYGySHTpy
+        AtfrDbD19bCxiSkmDo2wfvvKer/oZc+0dhaEf97e0DTx+oimAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="DeleteButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -165,10 +165,10 @@
         3PP1xTkREGkh1EMjUINylVZ2dJSVYaGiAss87wKlPomI0NZceDjsJLjg4QHrXrA7VKfbvbzgzMvDYkIC
         nkdFYTU2FqtxcVgIDcXA/8BqqARnKG/C3x8vKfl9YiI+pabiY0oKVkhwRadDx19GrIXqdhsLxghejo7G
         O4K/pqXhB01bz8jAGn+/IslV1nTvJVHPf4obdzn/mbAwrJDgA51+HRmJtfh4bNDEb+npGuliUBAusbbd
-        TXKYYzwh4rrJizIWEIBpdnlGgmUSXeSZB1j8mT58oYK39GWJvthY18c8cbVSKLJxjTO9zTGO8BpPhYTA
+        TXKYYzwh4rrJizIWEIBpdnlGgmUSXeSZB1j8mT58oYK39GWJvthY18c8cbXC+79xjTO9zTGO8BpPhYTA
         FhyMXoKb2YWelKuy31DNCxLNcyKT3L9PtZSwKYdEzI007jpHOMTkMEl6tsGaRK4uklxmk3mqs3ON06ez
-        JCXOrFog6sNoYuIGVbTze/xPp3WqkvMkHmcDFcxxbj0md1SRrVzkF6/nv56z7qTIQZ57Y6eziPwGDuJB
-        vH6vHgEAAAAASUVORK5CYII=
+        JCXOrFog6sNoYuIGVbTze/xPp3WqkvMkHmcDFcxxbj0md1SRrVzkF6/nv56z7qTIQZ57Y6eziPwGDd9B
+        u+Mf7OMAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="SaveButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -185,78 +185,138 @@
   <data name="ShowInFolderButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALiSURBVDhPrZJpSNNhAMb3JQiCvhT5ISnIRC1DU/IisDQP
-        RN2cYqWZts1rOs/lMbXhfZQDMxKR8KLIqZRpSXmkK80r75rpMk1dHlPnTOe5p9cx8Ev4pX7w8H55fs/7
-        8udP+e8UFBSyQ2+YTsd46UvC6DqdHDfd2iBXneJE5kUDTeVg4oKdJYAKwALJANZlbzA1XI6MMDNJgCnl
-        kKb2d6Kjbx3hhdNmgElgZ5BEBOy2kqEuvCoMRl4M/WcKy7yd66lfGUTVFbCczvhp1H34XGcpdtqxs9mE
-        nY1GqMiJ7WYy0kbSQdKHrZV3mJVUgelwqoMSF2jzNIRuIOW46YnifYxqKvIZUEyWQjnxBKKKSDwX+KAk
-        wxOd9UlQyqqhnBdie7kaWGuCp8XxcgqXadmxNVcCuUSAkcYIFPHtSJxQneeBCREXm6Op2JTko4yMyMT5
-        kI8VQDH2GCvjpaCaHculxDIsY4feJwBSAVSTOSTZ2P6eScR0rItT8Xs4GauD99BcGgRR2R3IBu9D/lWA
-        6d6HoFpopVL8rp3ULeQ7b0Cai90f2dgcS4dyhIhfkqEY5GO5LxFLPTws9mehOMkOUx/iIR/KxEhLBryu
-        aMeoP1xahO2LhS6e+tY1jSjvS8JiTwIWOuMw2x6DuTYuytJcIa4NhmIgGSLhXXhaa7PUAwksK+/KB25Y
-        6U2EjEhLn4nYzcP8pzhIP3Ix0xqFqZZINBT5ormAjlXyqupH/vC116GpB7wdzx4NpxopxTWBmCFF6Z7Q
-        HI6JpnCMvw2FpJ6N0bogfHsdgeIEGyiH0pDFo6lyuHb26oE9om6aOLCphk1RDufWc9hWEGa5YKCCAQkR
-        x+oCMVLjD/FLfwjTnSHv5oPjovvLxfyElkbfx5T8rpzrxlYcN8PsYJpBN8/bZEMQdhnlKQ4YqmKgs/Q2
-        +p8xwXTUa9AoB2Ntffow2/2CbZi7cVoAzWAg0ePSVgj9vIJho3dVU/kXKJQ/CKnf99QHJZEAAAAASUVO
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALiSURBVDhPrZJpSNNhAMb3JQiCvhT5ISnIRC1DU8qDwNI8
+        EHWHYaWZts1runktj6kN76McmJGIhBdFXpRpSXmkK80r75rpMk1dHlPnTOe5p9cx8Ev4pX7w8H55fs/7
+        8udP+e/k5eVzQm6YT0V5Gkp5DL0OLl2/JtBNrzCedd5IW9mfmCAXKaAGME/SjzX5G0wOlSKNd1Hqb045
+        oK39ncjIW4cEobRpYALYHiARAzstZKgTr/KDkBPF+JnEtmjjexhWBFL1RWznU75adQ8h30WG7TZsbzRi
+        e70BanJiq4mMtJK0k/Ric/kdZqSVYDmeaKfEBNg+DWYYybh0A3Gst0l1WS4TyoliqMafQFwWjucibxSl
+        eaCjLgEqeRVUc+XYWqoCVhvhYXm0lMJnWbVvzhZBIRVhuCEMBUJ7EmdU5VzDuJiPjZFkbEhzUUJG5JJc
+        KEbzoBx9jOWxYlAvHsmmRDOtogffxwEyEdQTWSSZ2PqeTsRUrEmS8XsoESsD99BUHAhxyR3IB+5D8VWE
+        qZ6HoFrqJFN8rx7Xzxe6rEOWjZ0fmdgYTYVqmIhfEqEcEGKpNx6L3QIs9GWgMMEekx9ioRhMx3BzGjwv
+        60ZpPlxKmN2L+U6B5tZVrajoTcBCdxzmO2Iw0xaF2VY+SlLcIKkJgrI/EeLyu/Cw0WVrBuLY1l4VD+hY
+        7omHnEiLn4nYJcDcpxjIPvIx3RKByeZw1Bf4oCmPgRXyqqpHfvBx0KNpBrycTh8OpZqoJNUBmCZF2a7Q
+        FIrxxlCMvQ2BtI6DkdpAfHsdhsI4W6gGU5AqoKmz+PYOmoFdIm6aOXKoxo0RDmfWsjjWKM9wRX8ZE1Ii
+        jtYGYLjaD5KXfihPdYGiSwiuq/4vV4tjOlp9D3Pyu3Kvm1pz6caZQTSjLoGX2bqIdwmlSY4YrGSio/g2
+        +p6xwHIyqNcq+2Njc/Igx/2cHc/dNMWfZtQfT7+wGcw4q2TaGlzRVv4FCuUPA6Pf8KFRKgEAAAAASUVO
         RK5CYII=
 </value>
   </data>
   <data name="ExportButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANYSURBVDhPVVNrSJNRGP4o+muRdhVNrEAlErK/Ef3IIrEM
-        NC0rV7mcrqYTL7ktP+dt+m3NXEzNcqldrKmVl+l0Lm2pmZZSeEkM8ZYXmtbSCqP2dL7PgfTC4bwvnOc5
-        7/NeKNZoml6jVGoCVHl5WpXqpiUrN2+aYQoWaTrrN01n/85htIu0IneaVigtKakZ2uikpACCWsOBWdPc
-        ulVrNJkxOv4ZU9ZFTC38woT1B8a+LGF07js+zdowPGND/7gVrT0DYIrKEClOrHfA2Qzk9vmlZYzNzqNv
-        ZBKW9yMwvx1GU/cgGrv60fB6APWd5CaxsXsIdZ0fEH5ZZHfAKSqBVqB7eBpLy38wu7CIybkFvHg7CENH
-        H/SmLuhqzFCXVkF8XQFppgr6xjYERwjggFNUvIT+09k/hp/Ldsx8/YGJua942NSF/Aoj6KJKiHNLEC3L
-        xcU4CZSF5ai39OJYyLm/DjhFJdLZqGtuQ1v7G7S0d+PdwAiK9Eaoyp5DqnmAWEUhYmQMRKkMdNXNMPUM
-        IexizGoGIokcPZ9mMNj5Bvy1a7lTUfcC8tBwxDi7QOS5C/nl1cjUlECmuAlteRVO8aJWCQRx6X8NVQYO
-        aJNKVgiauyBYvwHWMh0XR0sZXIhNQbq6CE+M7QgMjViVIOTxuUffsjNg9PDg/AQXF8xcEeLZxo1cLJDk
-        QJCcjvzSatS86iMSolcyiFy3zo99YMtXw+zrixYvL/QePYKh02Go3bwZNc7ORMYmFD42QHW3Almau7hR
-        /IBIcHSBBVsJuCMoCO2HDuHl/v0we3vD5OmJhu3bUe7khCg3DwikOeCJruFahhr3nppw/DRvRQJL0Obj
-        A/3WrWhyc4OJSDC5u3N+47ZtKHVzh5gvhkiuRkxKJm7o9CitbSVzcPl/Ca/27MF9QsISmMnvla6uuL9j
-        B+iQM7j9xICCx3VQ3nmEVGUB0kghSRtXJ1F49vxHlqSVZFJCisf6wk1bIAs5B/ltMkhMCQSyHFyKlSA+
-        jUGqqhCBYbxhB5yipBnMzmS+kCOxEBL2rjS/g7aqBfLiasSrdFwXgknhDgcG46B/QG9Q6PmdDviKsSud
-        cOzEVRbMnsiEJFvE1WR7MD/WfvDkBdu+A/593nv9ind7+ZJVphyrTFH/AAdKJ27kBVZ1AAAAAElFTkSu
-        QmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANXSURBVDhPVVNrSJNRGP4o+luRZmVoYgUqkVD+jehHGUlk
+        MS/dzVxOl7OJl9yWX3Pm9Nucupi3cqlZ1tTKy3I6l7bMTEspvCRG2M0LLW2phaJ7Ot/nQHrhcN4XzvOc
+        93kvFGs0Ta9SqbRB6txcnVqdZ72RnTvGMAUzNJ2+QNOKhSxGN0Mrs8dopcqamqbQxSQnBxHUKg7Mmvbm
+        zXqT2YJPn7/jm20G36b+4ottDqM/ZvFp8jc+TtgxPG5H/2cb2noGwBSVI0qc1OiEcxk4fs7OY3TiJ/pG
+        vsL6bgSWN8No7h5EU1c/nr4aQGMnuUls6h5CQ+d7nL4kcjjhFJVIK9E9PIbZ+UVMTM3g6+QUnr0ZhPFl
+        HwzmLujrLNCU1UB8TQlphhqGpnbwzgvghFNUgoRe7OwfxZ95B8an5/Blchr3mruQX2UCXVQNcXYpYmTZ
+        iLwigaqwAo3WXgSeOLXkhFNUEp2JhpZ2tHe8RmtHN94OjKDIYIK6/Amk2krEKwsRK2MgSmOgr22BuWcI
+        4ZGxKxmIJHL0fBzHYOdr8Fev5k5VwzPIw04j1sUVIu8dyK+oRYa2FDJlHnQVNQiNiF4h4MelLxlrjBzQ
+        LpUsE7R0QbBuPWzlei6OkTK4EJ+KdE0RHpo6cIR3ZkWCMILPPfqVqYDJy4vzE11dMX5ZiMcbNnCxQJIF
+        QUo68stqUfeij0iIWc4gas2avewDe74GFn9/tPr4oPdwIIZOhqPezQ11Li5ExkYUPjBCfbsKN7S3kVNS
+        SSQ4u8CCbQT8MjgYHQcO4HlAACy+vjB7e+Opuzsq1q5FtIcXBNIsRIiu4qpCgzuPzAgKPbssgSVo9/OD
+        YfNmNHt4wEwkmD09Ob9pyxaUeXhCzBdDJNcgNjUDOXoDyurbyBxc+l/Ci127cJeQsAQW8nv11q24u20b
+        6JBTKH5oRMGDBqhu3UeaqgDXSSFJG1cmUXjm3AeWpI1kUkqKx/rCjZsgCzkLeTEZJKYUAlkWLsZLkHCd
+        QZq6EEfDI4adcIqSKpjtKXwhR2IlJOxdbXkLXU0r5CW1SFDruS7wSOEOHuVh/6Gg3uCwc9ud8GVjVzrx
+        yLE4FsyeqMRk+/m4FAePH+/Yf/yCfc++Q32+u/eW7PTxJ6tMOVeZov4Bo2knRfYj2EUAAAAASUVORK5C
+        YII=
 </value>
   </data>
   <data name="ImportButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANuSURBVDhPRZNtTFNnFMcbvxu+b1+MVafGiGIyo3NqTIoi
-        4tBVRalSBKRgbHkZhb7YS6G19LYUaFdKmVREQQpUQ6FSrUVTN2ZE22hQQxzEt1VQIKmgBtT+vfdpo//k
-        5rk3Ob//Pec553BYURS1yGAwpxrr6qxGY31Aq68L03TjLEVpFyjqzEINbZ2ldPowpTMEZKpqa4FUmspQ
-        iwjMymyxuL0+P8af/49XU7N4NfMRL6be49nbOYxPvsN/ExGMvo5g5PkUbg4/At10HrnFZf1xnM1AHZ2e
-        m8eziWmEnr5E4MFT+O+N4trdxxi4M4Kr/z5C/xBzMt/eu0/QN/QQmSfEUQJzjyRs2JSXCOctH+bmP2Ni
-        ZhYvJ2cweO8xPP+E0OW7A0evH6bWHhSf1kGhMaJr4Bb4WSIQg6WCxSHdmAh7lTvxYT6KXRWbwRUkwNBx
-        AQ2XvKCaulGsb0GBUo/jRXIYbG3oDwSx+8DRL8SACQ43vpFhfd4S6BxnsL0oCdbpCmJSbqmHwnwREp0N
-        hUoaYhUNh+s6fMNPkHG8MJYBG9jyjsIvth8IRP4ePgleO5e8V9ot+LOjHw1tLmjMLVDq6mFt68FBYf43
-        g7D2RS52tC/BTudy7HOtw/4rSRAMbEGOl0dMcqrUKFDQyJbIUGVqgtP7N9IOZcVKWCpIcGZ7eDjm3UpM
-        UrpX4KD7Zwi925HvS0HpYAYxEclrICqvQkOrC723Q0wJBbEMlmUuFrABJcN8pF9ORLKTi91XViC19yfy
-        7OldSQxsnR4Yz16C1nwWtc0XmRLiXWD1e96RLztKN5LAzeYfke5Zg98GVmOPOwZnMyWIFDUQiitQUW3C
-        ucs+7D0sjJXASiKvxuDQfXS7vdgqTsLpsUyk9a0icJGpFtK6VojVJhTKNKh1dKHVfZOZgxPfMyiSU9Hg
-        2CQmIwvglW2E/o2IwFV2M+ydfbA7PWhkTsNfHVAZGlHJXCTTxtgkspKUUUE/M+OvI58Yg00Eru1sh6Xz
-        GtR2ZpDoFoiUNciRyFFSSUNltCEtQzgaxzkcRTXNlWv0QZfnBgLBUdx+OI5u/31Ye25A3exCidFBusBn
-        Lo6Xxse25NRg+qFj3DgeE7vSGoM5RarS2vNLZSO5f0gjWafKo/w8SXTbvuxI0q/JoVVrNzQvX5nIrDIn
-        vsoczldNQjhW7bSJRgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANtSURBVDhPRZNtTFNnFMcbvhu+zy/Gztcsw2Eyo25qTAqD
+        yoamQSJVeZXCspaXUegLvdCWld6WAq2llElFJkiBaih01NWiqRsagTYSwBCEgLIKDkgqbAts9r/bp838
+        JzfPvcn5/e85zzmHFRFFUXE6nZGrb2w06/VNvjptY5CmWzYpSrlDUaqdetq8SWm0QUqj80kUKnORWMxl
+        qDgCR2Q0mZxujxcLS79jeW0Tyxt/49Xan1j8YwsLq+/wciWE2TchTC2t4eHYNOjWW8gvrRiK4SSD8PrW
+        NhZX1hGYew3f8zl4x2dx/9kMhp9O4ecn0xgaZU7m2/3sBQZHJ5F1TRgmMPtS/NHjBQmwP/Jga/tfrGxs
+        4vXqBkbGZ+D6LYBez1PYBrwwdPSjtFoDmVqP3uFH4F0VgBjs5e8KaOYF+FqejL+2w/iq6gTY/Hjoun9C
+        8x03qNY+lGrbUSTXIrdECp2lE0M+P5IvXHpPDJjgYMtbCT4r2AON7QecKUmEeb2KmFSamiAz3oZIY0Gx
+        nIZQQcPm+AWesRfIzC2OZhAJbH9H4aTlIwKRvwe/BaeLTd5rrCZc7x5Cc6cDamM75JommDv7kZFd+L9B
+        sO5VPs527UGyfR/OO47gwr1E8Ie/QJ6bQ0zylLUoktHIEUmgNLTC7v4VqTx+tIS9/Hh7jouDK+5TxCSl
+        bz8ynJ8j230GhZ4UlI9kEhOBtB6CSiWaOxwYeBxgSiiKZvBx1i5+JKBsjIf0uwlIsrORem8/uAMHyHNu
+        4CAxsPS4oL9xB3XGG2hou82UEOtCROm5F9+fLT9GAk8YdyPd9Qm+GT6Mc84onMOUIJDVI1tYhSqVATfv
+        esDNuBwtISKRVIWR0Qn0Od04JUxE9XwW0gYPEbjE0ABxYweEtQYUS9RosPWiw/mQmYNrHzIokVJh//wq
+        VkM74FQcg/atgMBKqxHWnkFY7S60MKfux24odC2oYS6SaWN0EiMSVVB+LzPjb0L/MAbHCdzQ0wVTz33U
+        WplBotshkNcjTyRFWQ0Nhd6CtMzs2RjOYslUNFuq1vodrgfw+WfxeHIBfd4JmPsfoLbNgTK9jXSBx1wc
+        J42H00lcf/rFK+wYHlVkpdU6Y4pYUWctLJdM5X8vDl39rjLMKxCFT5/PCSV+mRQ49OnRtn0HE5hVZsVW
+        mcX6D+l2OCpRpMRfAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="ResetButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJGSURBVDhPrdBbSNNxHAXwo2aKl8ZyMy/buri0f1TekCkW
-        EmWECxxBBFEvhUkaOSu0QrAGkZdIEW0PGmHhvJQPKpYZNUhMMBCpFyE0RpnkvOSmVNo8ub+/Jx/yxc/L
-        n+85h//DDxsqxhr+Iq0hZnpflXY42qLqxHkUIBe7Rb2+XXURrVVf8tjkvsWOxXL2soaml4bZlcpndbGe
-        YugUpSHfG38W0+a+wx5W82hnuku0+LAZ2X3+iBfnGpUwpLVtd9ZO5rB+2kzbQgk7eI8HbQc+iwXeAequ
-        IIz1BSBfREIZdKnNuqlrI+m0OEy0jJ6h8UncUrunlFL9jn6xktmDYbar4OkJwGERAcoHwY+vDGfQ/MnA
-        jPboOdxGDgqRZ/tVxLBaRY2Yyd5vwfGhKPBVKF6LCEhp3us8PSAx0aZxoQIJclgGBSr9y2GBJN/CkAql
-        Dj3Yr4b3cVfFNukXsux6+tagRESy5QhIc1G4uxyGUO/9Q40EhxauaQkcjMCEPPLSPFLaDV0aohpHRCRb
-        Sg6sY2EixyJxcVKDCzP7A+eY6sc/CeCAGg1itsKKzLhnKs/K97JIZL+N2gE2nOX4icjFvzcyyFyJzArl
-        +E6fqUEltGK2alOLr9nP6juKVmwVERbPSaPsKiCfX6L3R6ww0pmmcE5sg0FM1mhBEhqRLS7MXz/m5lA5
-        +eYm2Z7Pr0kh38aV0In6/wj4ua4eWqD7LTnykOwtoue+ifPJIU/FZH2MxZ6Z+CDrVGZ4t/Ok/uPEqdhZ
-        V4qiW9QbAfgHzSjv5oc6/jgAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJFSURBVDhPrdBbSNNxHAXwo8sUL43lZl62dXFZ/6i8IVMs
+        JMoIDZQggqiXwiSNnBVaIViDyEukiLYHDZFwauWDimVGDRITDETqRQiNUUtyXnJTKm2e3N/fkw/txc/L
+        n+85h//DDxsq1hLxIq0pdmZ/jW40xqzuxgUUIR+7Re3brobIjpovBWx132bXUiX7Wcfcl8a51cpvbeFL
+        KfTK8tDvLT9LaXXfZR9reaw73SVafNiMnIEAxItznWoY055ud9ZP5bFxxkTrYhm7eJ+HrAc/iwXeAZqe
+        YEwMBKJQREIF9Klt+unrY+k023NpHj/L7GbDcqennFLjjkGxktlCYLKp4ekLxBERAaqHIc1XRzNo+mRk
+        RmfMPO4gD8UosP4qYXi9sk7MZO+34MRINPgqDK9FBKS07XOeGZKYaNW6UIUEOayAEtUBlTBDkm9hRI1y
+        uwEc1MD7uGviWg2LWTYD/etQJiLZSiSk+WjcWwlHmPf+oUGCXQfXjAQOR2JSHnlpH6tsxh4tUYujIpIt
+        Jwc1sDiRE1G4NKXFxdkDQfNMVfBPAjikQZOYrbIgc88ztWf1e0Ukst/ZuiE2naPjZNTS35sZZL5EZoXR
+        sdNvelgFnZit2dTub1JY/MfRga0iwtJ5aZw9ReTzy/T+iFXZdKYpnZPbYBSTddqRhBbkiAsLN467OVJJ
+        vrlFdhbya1LoN4cKelH/HwGF69rhRbrfkmOPyP4Seh7kciE59ImY+MY47J2ND7ZMZ0b0Ok8ZPk6ejptz
+        pSh7Rb0RgH+9Be/gyyXlzAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="SelectAllButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ0SURBVDhPpVPbThpRFJ1v0bc+akoVL6lYRbyQCppiY5P+
+        gw9tHVAs4g0ShkYEGQYFGYVhuIgitKZ99DvaQJtULCqa9HF1n/HSa9KknWTPXsk5a6+1zpzh/vtZCsaP
+        XP4QFl6J8ASi8IY24I/EsRqVEaBi3S9uYXVThiBtwSfGEKQeiiYgbaeOON6zBtdaDB5xG4GtDCSlADlf
+        hlp6h2z5rVap/UMoxTcQaS2YyGh73cRxLAXA8SsBPC1+xWT2FDbhEI/zFxhLfcFDTwlWtYEHsWO0Pldg
+        3DmHMVGD4WUBxmQD7dEaHF4a4BDCeJI7xUTyIyZ8r2FTT2CVq7B6ixjerkEfeo8B9y5GCBtjFRicWXRH
+        P0MXqsApRNiAiKZsE8rocR9i3FuCxXuANmcJnXwaJiK3Og4w4NpF90wGTVM5tE2ncPeFilm/RAN8YUwW
+        LvFIOdHItlwDo8kTbbM53cCIXEM/kXvlM025jU/BIJ9DLx1jltxrA8aVOixk27JyACuRe6UK+ubJNpH7
+        NirodKjoIrJ+/QP0vHobYVYQwc1QhFFmm8jtc2UMuvfQM5dDi70IIykzcjPZ7qA4rJqm8minrvsxwlj2
+        kmzXYF7cp9M+wyCdNiMz25oyr8CQONeUO67xbYQZepmTdQzFqxiYL6Avfoz+zQq66AxubHfY098xqf8W
+        wbSwj+HFPdx5Rt+YlHucuSvbdlUjN5PtmwgMaxGmryMwB0PKBUzsklB2E12YbonUiHxj+yf8pwiGeB1d
+        kSruO+nQaIHZu8dntE2/Yh2fJVxDS7B6FcEVTn5aXJexFKYSd7BMfVlk9RdMxbjX/+S/Phz3DTRtVulc
+        I/ydAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="DeselectAllButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIiSURBVDhPpZPtT9NQFMb7b5tFjcYIy2ZAcMUhWSS+hC9E
+        FFhkMukYWxzuBcaKiYl+wGSOwbbSdX27bR/PuTjHvuJNTu7p2vO7z3PPmfLf635SLcdm53AvvoCHyRQe
+        zamYXUwjkVpBkoL3+OIyEksrmHm2jMcLz5Gk908of5rOlJVYQsUD9RVmXqxhfnUdS2sfkFn/iNebu3i7
+        lccbipcbO1h9n0OK3vE3/C3X3I2rUO4k0xivg8YpRBRChBH26zr8IIAjBPJfm7BcD5bnUX4Ck3bD8cC1
+        Smw+I4uDMESRASEVeb4sujSH+NHpYufLEXpDSz5nyw18b3dwdtkD10pAqfENxfopncqhyyhQ5Khwt3JM
+        0USO9mypgY39Q7zTKtgu1ScAXoIUMIBl+4HAZ5Lq+kIG5+fGFX5d9LBZrOLneRcdep4GBAzQIUQImzzu
+        VVvwhA+HAPnDJvokv90fYKtUwxmBLq7MaQtj6VpNp+ITFGotaFVd3gVb+EQW2FKWpG8TJFc5mgAiUsDS
+        C1TMp3s+5y1YjgvTdiRgYI3Qp4tkyO+BAcOypwFCBPJE9swAVjF0nGsAWTBGBLAYcIwuyTdGzgRwQBb4
+        dI18a2yD9j26OL48tsB3cNMGt5V/v6EgkiePFdg0BwwY8fC47vXw2LZUwQCeB5MG6R+AVxhFUkkoJ5GG
+        ilrKQ8VdYXUetZY7wt1hsEcTOga0OblltP/+J2+7FOUPZMDsWRxigAMAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="CheckSelectedButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIpSURBVDhPzZFdSJNxFMZfYnMMbJ+0m1xufUybW9uczo8N
+        59yHa2242mpzeyF1sTnnJkQklRfD8KKk8MagZRHWdIRWW0HLoCi8lIpIoaIgKYKgi1AxEPc06wWJZNVd
+        P/jf/M/zPOdwDvGvsGS0UHEFfYmrKOqlvv4etrLooLCBsxoZ90Js5+a4SvppqvRnivfQdLxK5nIs6Ycv
+        2Qj7NTl4auY3qlwYtoQQsyo2fQ4m3GibMKPlhhzbbOwcR8kIU5KfHD11Imptta7Ejp0EGQijtT2EI909
+        kBl3wj1gQnDSDk9WDYmfD66K0U/ZKMqIzUKNIFcVK4XMIsW5yylcuH4LBp8Z2k4ZuiYPwDtVDfXxEvAU
+        jDHKtU5+u2ljnxK9twMwD8ohby5D//AZ7HII0JP2wHOnBqZEOZRWKYgSgknZ1uGp6F88l/ToyFiwf7Qa
+        jQPl2OHgIzLhgv+uFu786ELdFjQ7HaAsv8JS0DRivQC2URm896rgTCnhGqlFx5QRh2d0ENm5OH/1IrQG
+        y8YBa7RFOn90cd2sBPmkHt6sBoFnDajpEyEaD+P56/nCAWSwG/GhIWw3CEA+rEXopQGH7mug2ifF18Ul
+        zL79UDjAlz/dSCqDzOMHEBn5CM02odTKxfTTaays5vDq/afCAS3e9uXBRBKPZuZw9sowttZz0BWP4sWb
+        ecy9+4jxdBZ1essiJf+dJpuT1Jn2Lqx12ejVGcwLYslukpL/FxDEd/LU/lI81ciZAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="UncheckSelectedButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGHSURBVDhP7ZFLSwJxFMX9Km2C9vYyNCrauIpo0cKFBkFk
+        4GJArCxioojAKEPsAVNhBb0WUeuWFVEEUYYoNYmjvWZMZ8ZHjp3+I7MohFm36Ad3d865l3sM//xmxrfo
+        cI/S8vDENCgvDZdnDE5qBP0uN+xOCr32QbnT2m3X5NWoZtrPgF5cx+zyJuaZXQRCB1jZPsTa3jECW4cw
+        tbbJmrya4YkpeH1LOLmO4jzM4ubhGbGkAO5dgiAruIwmUW+yQJNXo549ucDg7I7FVSSO8NMLHlMCkrwI
+        QSziOsrBqBfg8oxjJrhBNqcQZl/wQMwpXgKfKUDOl3HLvuoHDFKjmFvdQoxLV8yckAUv5pDJl1BQvhDh
+        eP0A9dt+ZgccOZl7F/GWySFLzPmiAqUMsM9pGJt1AvqGKARD+xCkEtLiJ0RiJl6UiVkl9ZHTv6DHMSDN
+        keouIgnyRK7Swn38jTTBI0GaODo5RaPJImnyatqtXbYmc4fY0GKp1KVu+zn1JrNYU1tn0+R/AoPhG+a8
+        Je3TUwrbAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="SettingsImportOpenFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
